[#354] Feat: 판정 대기 목록
